2.6.24 (2025-08-26)

- The same model is now used for both embedding and query in attachment indexing.
- Translations have been added to Agents.

2.6.23 (2025-08-25)

- Added an inline "Add a new chat" button to the right of the tabs.
- Added an "Add Attachment" button in the input field.
- Improved file open in the system's file manager
- Fixed the restoration of input text color when changing themes from light to dark.
- Fixed last eval step finish if 100% complete.

2.6.22 (2025-08-25)

- UI refactor and optimizations.

2.6.21 (2025-08-24)

- Ollama models are now available in OpenAI Agents mode.
- Improved parsing of responses from Agents.
- Fix: do not initialize index in Agents mode if not provided.
- Fix: agent response evaluation steps limit.
- Fix: do not execute code in agents if Tools are disabled.
- Refactoring.

2.6.20 (2025-08-22)

- Added a new plugin: Server (FTP/SSH) - connect to remote servers using FTP, SFTP, and SSH. Execute remote commands, upload, download, and more (beta).
- Added support for Wayland in Snap/compiled versions.

2.6.19 (2025-08-22)

- Fixed: added prevention for summarizing an empty context.
- Improved the speed of context item refreshing.

2.6.18 (2025-08-21)

- Refactor and optimizations.
- Fix: Evolve agent stop event calling.

2.6.17 (2025-08-21)

- Optimized profile switching.
- Fixed: setting initial splitter size on first launch.
- Added smoother view reload.

2.6.16 (2025-08-20)

- Fixed: Attachment string joining.
- Improved expert function calls.
- Added sorting to the plugin list.

2.6.15 (2025-08-20)

- Added: do not change the context menu font size in text editing.
- Added: do not reload context items on tab change if already loaded.
- Fixed: appending of names and avatars in the stream chunk.

2.6.14 (2025-08-19)

- Fixed: Agent evaluation tool runs even if tools are disabled.
- Extended agent response evaluation by providing the full context of the output.

2.6.13 (2025-08-19)
