@@ -51,6 +51,7 @@ llama-index-agent-openai = "^0.4.8"
 llama-index-core = "0.12.44"
 llama-index-embeddings-azure-openai = "^0.3.8"
 llama-index-embeddings-gemini = "^0.3.2"
+llama-index-embeddings-google-genai = "^0.2.1"
 llama-index-embeddings-huggingface-api = "^0.3.1"
 llama-index-embeddings-mistralai = "^0.3.0"
 llama-index-embeddings-ollama = "^0.5.0"
