@@ -1246,8 +1246,10 @@ settings.llama.idx.custom_meta = Custom metadata to append/replace to indexed do
 settings.llama.idx.custom_meta.desc = Define custom metadata key => value fields for specified file extensions, separate extensions by comma.\nAllowed placeholders: {path}, {relative_path} {filename}, {dirname}, {relative_dir} {ext}, {size}, {mtime}, {date}, {date_time}, {time}, {timestamp}
 settings.llama.idx.custom_meta.web = Custom metadata to append/replace to indexed documents (web/external content)
 settings.llama.idx.custom_meta.web.desc = Define custom metadata key => value fields for specified external data loaders.\nAllowed placeholders: {date}, {date_time}, {time}, {timestamp} + {data loader args}
-settings.llama.idx.embeddings.args = Embeddings provider **kwargs
+settings.llama.idx.embeddings.args = Global embeddings provider **kwargs
 settings.llama.idx.embeddings.args.desc = Additional keyword arguments (**kwargs), such as model name, for the embeddings provider instance. These arguments will be passed to the provider instance; please refer to the LlamaIndex API reference for a list of required arguments for the specified embeddings provider.
+settings.llama.idx.embeddings.default = Default embedding providers for attachments
+settings.llama.idx.embeddings.default.desc = Define embedding model by provider to use in attachments
 settings.llama.idx.embeddings.env = Embeddings provider ENV vars
 settings.llama.idx.embeddings.env.desc = Environment to set up before embedding provider initialization, such as API keys, etc. Use {config_key} as a placeholder to use the value from the application configuration.
 settings.llama.idx.embeddings.limit.rpm = RPM limit
